# py_acronym_keeper

./: .gitignore  README.adoc  TODO.adoc  cspell.json  pyproject.toml
py_acronym_keeper/: acronym.py  config.py  pattern_match.py  printer.py  toml_store.py  user_config.py  util.py
py_acronym_keeper/cli/: root.py
tests/: conftest.py  test_cli_list.py  test_cli_store.py  test_toml_store.py  test_util_stringer.py
tests/data/: happy_path.toml
