[tool.poetry]
name = "py-acronym-keeper"
version = "0.1.0"
description = "An easy-to-use place to keep acronyms."
authors = ["Nathaniel Jones <nathaniel-j-jones@proton.me>"]
license = "MIT"
readme = "README.adoc"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
tomlkit = "^0.12.4"
platformdirs = "^4.2.0"

[tool.poetry.scripts]
pak = "py_acronym_keeper.cli.root:root_group"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
